# devdoctor

./: .gitignore  CONTRIBUTING.md  LICENSE  PHASE2.md  README.md  devdoctor.toml  pyproject.toml
.github/workflows/: ubuntu-package.yml
Formula/: devdoctor.rb
devdoctor/: autofix.py  cli.py  hotspots.py  issues.py  request_traces.py  runner.py  watcher.py
devdoctor/config/: loader.py
devdoctor/output/: html_writer.py
devdoctor/parser/: engine.py  patterns.py
devdoctor/snapshot/: manager.py
devdoctor/utils/: color.py  project.py
dists/stable/: Release
dists/stable/main/binary-all/: Packages
packaging_tools/: __init__.py  apt_repo.py  deb.py
pool/main/d/devdoctor/: devdoctor_1.2.6-1_all.deb
scripts/: build_apt_repo.py  build_deb.py
tests/: test_autofix.py  test_cli.py  test_hotspots.py  test_html_writer.py  test_packaging_tools.py  test_parser_engine.py  test_request_traces.py
