[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devdoctor"
version = "1.0.7"
description = "Backend log diagnostics CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
devdoctor = "devdoctor.cli:main"

[project.urls]
Homepage = "https://github.com/tusharravindran/devdoctor"
Repository = "https://github.com/tusharravindran/devdoctor"

[tool.setuptools.packages.find]
where = ["."]
include = ["devdoctor*"]
